--- a/app/src/main/res/layout/activity_map_view.xml
+++ b/app/src/main/res/layout/activity_map_view.xml
@@ -12,7 +12,6 @@
         android:layout_height="match_parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar">
-    </com.google.android.gms.maps.MapView>
+        app:layout_constraintTop_toBottomOf="@+id/toolbar"/>
 
 </LinearLayout>
