--- a/app/src/main/res/layout/activity_startup_details.xml
+++ b/app/src/main/res/layout/activity_startup_details.xml
@@ -17,8 +17,8 @@
                 android:id="@+id/image_view_logo"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:layout_marginTop="@dimen/margin_16"
                 android:layout_marginBottom="@dimen/margin_16"
+                android:layout_marginTop="@dimen/margin_16"
                 android:scaleType="fitCenter"
                 android:src="@drawable/logo_google"/>
 
@@ -29,86 +29,23 @@
                 android:layout_marginStart="@dimen/layout_margin16"
                 android:orientation="vertical">
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
-                    <TextView
-                        android:layout_width="100dp"
-                        android:layout_height="wrap_content"
-                        android:text="@string/name"
-                        android:textSize="@dimen/text_size_sub_heading_16"
-                        android:textStyle="bold"/>
-                    <TextView
-                        android:id="@+id/text_view_name"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textSize="@dimen/text_size_16"
-                        tools:text="Google"/>
-                </LinearLayout>
+                <include android:id="@+id/name"
+                    layout="@layout/item_startup_details"/>
+
+                <include android:id="@+id/industry"
+                    layout="@layout/item_startup_details"/>
+
+                <include android:id="@+id/founded"
+                    layout="@layout/item_startup_details"/>
+
+                <include android:id="@+id/founders"
+                    layout="@layout/item_startup_details"/>
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/margin_4"
                     android:orientation="horizontal">
-                    <TextView
-                        android:layout_width="100dp"
-                        android:layout_height="wrap_content"
-                        android:text="@string/industry"
-                        android:textSize="@dimen/text_size_sub_heading_16"
-                        android:textStyle="bold"/>
-                    <TextView
-                        android:id="@+id/text_view_industry"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textSize="@dimen/text_size_16"
-                        tools:text="Internet, Software, Computer Hardware"/>
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:layout_marginTop="@dimen/margin_4">
-                    <TextView
-                        android:layout_width="100dp"
-                        android:layout_height="wrap_content"
-                        android:text="@string/founded"
-                        android:textSize="@dimen/text_size_sub_heading_16"
-                        android:textStyle="bold"/>
-                    <TextView
-                        android:id="@+id/text_view_founded"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textSize="@dimen/text_size_16"
-                        tools:text="1998"/>
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:layout_marginTop="@dimen/margin_4">
-                    <TextView
-                        android:layout_width="100dp"
-                        android:layout_height="wrap_content"
-                        android:text="@string/founders"
-                        android:textSize="@dimen/text_size_sub_heading_16"
-                        android:textStyle="bold"/>
-                    <TextView
-                        android:id="@+id/text_view_founders"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textSize="@dimen/text_size_16"
-                        tools:text="Larry Page, Sergey Brin"/>
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:layout_marginTop="@dimen/margin_4">
                     <TextView
                         android:layout_width="100dp"
                         android:layout_height="wrap_content"
@@ -119,16 +56,16 @@
                         android:id="@+id/text_view_site"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textSize="@dimen/text_size_16"
                         android:textColor="@color/colorAccent"
+                        android:textSize="@dimen/text_size_16"
                         tools:text="www.google.com"/>
                 </LinearLayout>
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/margin_16"
                     android:layout_marginBottom="@dimen/margin_4"
+                    android:layout_marginTop="@dimen/margin_16"
                     android:text="@string/about"
                     android:textSize="@dimen/text_size_sub_heading_16"
                     android:textStyle="bold"/>
@@ -152,18 +89,18 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="@dimen/margin_8"
-                    android:textSize="@dimen/text_size_sub_heading_16"
                     android:text="@string/address"
+                    android:textSize="@dimen/text_size_sub_heading_16"
                     android:textStyle="bold"/>
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/margin_24"
                 android:layout_marginEnd="@dimen/layout_margin16"
                 android:layout_marginStart="@dimen/layout_margin16"
                 android:layout_marginTop="@dimen/margin_8"
-                android:layout_marginBottom="@dimen/margin_24"
                 android:orientation="horizontal">
 
                 <LinearLayout
@@ -198,8 +135,8 @@
                         android:layout_width="200dp"
                         android:layout_height="wrap_content"
                         android:textSize="@dimen/text_size_16"
-                        tools:text="1600 Amphitheatre Pkwy, Mountain View, CA 94043, USA"
-                        android:textStyle="italic"/>
+                        android:textStyle="italic"
+                        tools:text="1600 Amphitheatre Pkwy, Mountain View, CA 94043, USA"/>
                 </LinearLayout>
             </LinearLayout>
         </LinearLayout>
