--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,35 +30,14 @@
                     android:layout_height="wrap_content"
                     android:orientation="vertical">
                     <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textAlignment="center"
-                        android:layout_marginBottom="@dimen/layout_margin8"
-                        android:layout_marginStart="@dimen/layout_margin8"
-                        android:layout_marginTop="@dimen/layout_margin8"
-                        android:text="@string/question_main_activity"
-                        android:textSize="@dimen/text_size_20"
-                        android:textStyle="bold"/>
-
+                        style="@style/textTitle"
+                        android:text="@string/question_main_activity"/>
                     <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginBottom="@dimen/layout_margin8"
-                        android:layout_marginStart="@dimen/layout_margin8"
-                        android:layout_marginTop="@dimen/layout_margin8"
-                        android:text="@string/answer_question_main_activity"
-                        android:textAllCaps="false"
-                        android:textSize="@dimen/text_size_16"/>
+                        style="@style/textBody"
+                        android:text="@string/answer_question_main_activity"/>
                     <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginBottom="@dimen/layout_margin8"
-                        android:layout_marginStart="@dimen/layout_margin8"
-                        android:layout_marginTop="@dimen/layout_margin8"
-                        android:gravity="center"
-                        android:text="@string/gallery"
-                        android:textSize="@dimen/text_size_16"
-                        android:textStyle="bold"/>
+                        style="@style/textSubTitle"
+                        android:text="@string/gallery"/>
 
                     <HorizontalScrollView
                         android:layout_width="match_parent"
@@ -154,18 +133,9 @@
                     </HorizontalScrollView>
 
                     <Button
+                        style="@style/buttonCallToAction"
                         android:id="@+id/btn_see_attractions"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:layout_marginBottom="@dimen/layout_margin8"
-                        android:backgroundTint="@color/colorAccent"
-                        android:text="@string/see_attractions"
-                        android:textAlignment="center"
-                        android:textAllCaps="true"
-                        android:textColor="@color/color_white"
-                        android:textSize="@dimen/text_size_16"
-                        android:textStyle="bold"/>
+                        android:text="@string/see_attractions"/>
                 </LinearLayout>
 
             </android.support.v7.widget.CardView>
